crates/vize/src/commands/doctor/tui/tests/snapshots/vize__commands__doctor__tui__tests__snapshot_tests__doctor_tui_ascii_monochrome.snap
---
source: crates/vize/src/commands/doctor/tui/tests/snapshot_tests.rs
assertion_line: 106
expression: screen
---
VIZE DOCTOR  + Score: 95 / 100
category=all  severity=all  visible=2/2  2 matching finding(s)
-j/k navigate  Tab focus  c/C category  s/S severity  / search  ? help  q quit----------------------
> x error VIZE_TEST_ERROR — Mutable s...|VIZE_TEST_ERROR — Mutable state crosses a contract
  ! warning VIZE_TEST_A11Y — Accessib...|x Severity: error
                                        |+ Confidence: high
                                        |x Impact: high
                                        |- Location: src/Parent.vue:2:10
                                        |Category: correctness  Penalty: -15
                                        |A detailed explanation with a concrete next action.
                                        |— Evidence —
                                        |i Evidence: reactivity: Child destructures the reactive
                                        |prop
                                        |i Evidence: component: Parent passes mutable state
                                        |— Fix —
                                        |- Fix safety: unavailable
