crates/vize/src/commands/doctor/tui/tests/snapshots/vize__commands__doctor__tui__tests__snapshot_tests__doctor_tui_narrow.snap
---
source: crates/vize/src/commands/doctor/tui/tests/snapshot_tests.rs
assertion_line: 83
expression: screen_text(&buffer)
---
VIZE DOCTOR  ✓ Score: 95 / 100
category=all  severity=all  visible=2/2  2 matc...
─j/k navigate  Tab focus  c/C category  s/S se...─
› ✕ error VIZE_TEST_ERROR — Mutable state cross...
  ▲ warning VIZE_TEST_A11Y — Accessibility name...
